--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Overview.cshtml
@@ -435,9 +435,11 @@
                             });
 
                             mapData.sort((a, b) => { return a.x - b.x; });
-                            let latestDate = mapData[mapData.length - 1].name;
-                            const updateDate = latestDate.replaceAll('-', '/');
-                            $('[data-update-date="performance"]').text(updateDate);
+                            if (mapData) {
+                                let latestDate = mapData[mapData.length - 1].name;
+                                const updateDate = latestDate.replaceAll('-', '/');
+                                $('[data-update-date="performance"]').text(updateDate);
+                            }
 
                             Highcharts.stockChart('performanceChart', {
                                 ...nearlySetting,
@@ -530,10 +532,12 @@
                         mapMarketData.sort((a, b) => { return a.x - b.x; });
                         mapNetWorthData.sort((a, b) => { return a.x - b.x; });
 
-                        let latestDate = mapMarketData[mapMarketData.length - 1].name;
-                        const updateDate = latestDate.replaceAll('-', '/');
-                        // 資料日期
-                        $('[data-update-date="netWorth"]').text(updateDate);
+                        if (mapMarketData) {
+                            let latestDate = mapMarketData[mapMarketData.length - 1].name;
+                            const updateDate = latestDate.replaceAll('-', '/');
+                            // 資料日期
+                            $('[data-update-date="netWorth"]').text(updateDate);
+                        }
 
                         Highcharts.stockChart('netWorthChart', {
                             ...nearlySetting,
