改成顯示1個月績效 修正弱點

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ConsultSchedule.cshtml
@@ -43,20 +43,20 @@
                 closeOnBgClick: false,
                 callbacks: {
                     afterClose: function () {
-                        window.location.href = new URL(window.location.origin + '@Model.ReturnLink');
+                        location.href = new URL(location.origin + '@Model.ReturnLink');
                     }
                 }
             });
         }
         else {
-            window.location.href = new URL(window.location.origin + '@Model.ReturnLink');
+            location.href = new URL(location.origin + '@Model.ReturnLink');
         }
     });
 
     $('[data-return]').on('click', function (e) {
         e.preventDefault();
 
-        window.location.href = new URL(window.location.origin + '@Model.ReturnLink');
+        location.href = new URL(location.origin + '@Model.ReturnLink');
     });
 </script>
 
