.val().trim() 改 .val().toString().trim()

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -410,7 +410,7 @@
                 });
 
                 $('[data-keyword-input]').on('keypress.loading', function (e) {
-                    if (e.which === 13 && !!$(this).val().trim()) {
+                    if (e.which === 13 && !!$(this).val().toString().trim()) {
                         $('[data-keyword-submit]').trigger('click.loading');
                     }
                 });
@@ -486,7 +486,7 @@
                 $('.l-mainstage input:not([data-keyword-input])').on('change.loading', loading);
 
                 $('[data-keyword-submit]').on('click.loading', function () {
-                    if (!!$('[data-keyword-input]').val().trim()) {
+                    if (!!$('[data-keyword-input]').val().toString().trim()) {
                         loading();
                         insertKeywords();
                     }
