--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2098,7 +2098,7 @@
                     $('[data-tab] [data-tab-target]:first').trigger('switch');
                 });
                 $('[data-keyword-input]').on('keypress.loading', function (e) {
-                    if (e.which === 13 && !!$(this).val().trim()) {
+                    if (e.which === 13 && !!$(this).val().toString().trim()) {
                         $('[data-keyword-submit]').trigger('click.loading');
                     }
                 });
@@ -2169,7 +2169,7 @@
                 }).sizebox();
                 $('.l-mainstage input:not([data-keyword-input])').on('change.loading', loading);
                 $('[data-keyword-submit]').on('click.loading', function () {
-                    if (!!$('[data-keyword-input]').val().trim()) {
+                    if (!!$('[data-keyword-input]').val().toString().trim()) {
                         loading();
                         insertKeywords();
                     }
