--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -636,7 +636,7 @@
                     fjs.bindEvent('[data-keyword-submit]', 'click.loading');
 
                     $('[data-keyword-input]').on('keypress.loading', function (e) {
-                        if (e.which === 13 && !!$(this).val().trim()) {
+                        if (e.which === 13 && !!$(this).val().toString().trim()) {
                             $('[data-keyword-submit]').trigger('click.loading');
                         }
                     });
@@ -660,7 +660,7 @@
                     $('#uid-view-perPage').on('change.pagesize', fnScrollUp).sizebox();
                     $('.l-mainstage input:not([data-keyword-input])').on('change.loading', loading);
                     $('[data-keyword-submit]').on('click.loading', function () {
-                        if (!!$('[data-keyword-input]').val().trim()) {
+                        if (!!$('[data-keyword-input]').val().toString().trim()) {
                             window.loading('show');
                             setTimeout(() => {
                                 window.loading('hide');
