--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
@@ -188,7 +188,7 @@
                 const requiredMsg = '欄位必填';
                 let $parents = $element.closest('.l-form');
                 let $msg = $parents.find('.o-errorText');
-                let isEmpty = $element.val().trim() == '';
+                let isEmpty = $element.val().toString().trim() == '';
                 $parents.toggleClass('is-error', isEmpty);
                 $msg.text(isEmpty ? requiredMsg : '');
                 return !isEmpty;
