--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -609,13 +609,13 @@
                 loading();
             });
             $('[data-keyword-submit]').on('click.loading', function () {
-                if (!!$('[data-keyword-input]').val().trim()) {
+                if (!!$('[data-keyword-input]').val().toString().trim()) {
                     loading();
                     insertKeywords();
                 }
             });
             $('[data-keyword-input]').on('keypress.loading', function (e) {
-                if (e.which === 13 && !!$(this).val().trim()) {
+                if (e.which === 13 && !!$(this).val().toString().trim()) {
                     $('[data-keyword-submit]').trigger('click.loading');
                 }
             });
